--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx src/index.ts",
-    "prepublishOnly": "pnpm run build",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "pnpm run build && pnpm start"
   },
   "keywords": [
     "mcp",
