--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-layouts-mcp",
+  "name": "@ui-layouts/mcp",
   "version": "0.2.0",
   "description": "MCP server for ui-layouts (local STDIO)",
   "main": "dist/index.js",
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "pnpm run build && pnpm start"
+    "dev": "pnpm run build && pnpm start",
+    "prepublishOnly": "pnpm run build"
   },
   "keywords": [
     "mcp",
@@ -24,7 +25,9 @@
     "ui-layouts-mcp": "./dist/index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE"
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.1",
@@ -33,5 +36,12 @@
   "devDependencies": {
     "@types/node": "^24.8.1",
     "typescript": "^5.9.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ui-layouts/mcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ui-layouts/mcp/issues"
   }
 }
