--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
   "files": [
     "dist",
     "README.md",
-    "LICENSE"
+    "LICENSE.md"
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^8.0.0",
     "@types/node": "^24.8.1",
+    "release-it": "^19.0.6",
     "typescript": "^5.9.3"
   },
   "repository": {
