--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "pnpm run build && pnpm start",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "release": "release-it",
+    "release:dry-run": "release-it --dry-run"
   },
   "keywords": [
     "mcp",
@@ -19,7 +21,7 @@
   "author": "YEOM-JINHO <pwlsghq@naver.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=18"
+    "node": ">=20.10.0"
   },
   "bin": {
     "ui-layouts-mcp": "./dist/index.js"
