chore: configure public npm access and remove branch restriction

--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
   },
   "bugs": {
     "url": "https://github.com/ui-layouts/mcp/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
