--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-layouts/mcp",
-  "version": "0.2.0",
+  "version": "0.2.1-0",
   "description": "MCP server for ui-layouts (local STDIO)",
   "main": "dist/index.js",
   "type": "module",
