--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@ui-layouts/mcp",
   "version": "0.2.1-0",
   "description": "MCP server for ui-layouts (local STDIO)",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "dev": "pnpm run build && pnpm start",
     "prepublishOnly": "pnpm run build",
     "release": "release-it",
@@ -24,7 +24,7 @@
     "node": ">=20.10.0"
   },
   "bin": {
-    "ui-layouts-mcp": "./dist/index.js"
+    "ui-layouts-mcp": "./dist/src/index.js"
   },
   "files": [
     "dist",
